[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlisp-ole"
version = "0.2.3"
authors = [
  { name="VitalGG", email = "vitalgg@gmail.com"},
]
description = "atlisp-ole 是 @lisp CAD应用云调用py将图片以OLE方式插入dwgr的应用包。"
readme = "README.md"
keywords  = ['atlisp',"@lisp","CAD应用云","autolisp"]
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pywin32>280",
    "pillow",
    "atlisp"
    ]

[project.urls]
"Homepage" = "https://atlisp.cn"
[project.scripts]
atlisp-ole = "atlisp_ole:main"
